ci: Construção da pipeline de CI do packer
Commit com a construção do processo de CI da imagem do packer
Feito também o acrescimento no requirements.yml a documentação do
ansible galaxy nos comentarios
Corrigido a variavel de ambiente do Projeto ID, ela deve ser buscada
exatamente igual ao que esta declarado dentro de env(GCP_PROJECT).
Function do HCL env() usada em variables.pkr.hcl.
Adicionado o step de instalação do ansible e packer, visto que o actions default
da hashicorp não possui ansible.

Revisores:
- Gabriel Inglesias
- hmljunior
- Luiz Aoqui
- Marlen_Souza
- plinio
- Thais d' Angelis
- Vinicius-Cursi

Ref: #6

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,4 +1,6 @@
 ---
+# Como utilizar requirements do ansible-galaxy -> https://galaxy.ansible.com/docs/using/installing.html
+
 - src: https://github.com/mentoriaiac/iac-role-node-rke.git
   scm: git
   version: v0.1.0
